--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -2,6 +2,10 @@
 @icons_image_path: url(../imgs/icon/icons.png);
 @icons2_image_path: url(../imgs/icon/icons2.png);
 @icon2_image_path: url(../imgs/icon/up-new-iocn.png);
+@label_active_image_path: url(../imgs/icon/label_active.png);
+@label_topic_image_path: url(../imgs/icon/label_topic.png);
+@label_photo_image_path: url(../imgs/icon/wh2.png);
+@label_video_image_path: url(../imgs/icon/sp2.png);
 @logo_image_path: url(../imgs/header/logo.png);
 @userPortrait_image_path: url(../imgs/header/alun.png);
 @specialGif_image_path: url(../imgs/icon/special.gif);
