重构网页代码，导航栏完成

--- a/q6(vue-webpack)/src/assets/less/body.less
+++ b/q6(vue-webpack)/src/assets/less/body.less
@@ -1,15 +1,21 @@
 .body_index, .body_about {
-    position: absolute;
-    top: 48px;
+    position: relative;
     margin-top: 10px;
     width: 100%;
-    z-index: -2;
+    height: 1000px;
+}
+
+.suoyin_road {
+    display: inline-block;
+    position: absolute;
+    right: -10px;
 }
 
 .suoyin {
-    position: absolute;
-    right: -80px;
+    position: fixed;
+    top: 250px;
     width: 50px;
+    transition: all 0.5s;
 }
 
 .position_menu {
