--- a/q6(vue-webpack)/src/assets/less/main.less
+++ b/q6(vue-webpack)/src/assets/less/main.less
@@ -1,5 +1,5 @@
 @import './values.less';
 @import './header.less';
-@import './header_add.less';
+@import './second_header.less';
 @import './child_menu.less';
 @import './body.less';
