--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -2,6 +2,7 @@
 @icons_image_path: url(../imgs/icon/icons.png);
 @icons2_image_path: url(../imgs/icon/icons2.png);
 @icon2_image_path: url(../imgs/icon/up-new-iocn.png);
+@foot_icon_image_path: url(../imgs/icon/foot_icon.png);
 @label_active_image_path: url(../imgs/icon/label_active.png);
 @label_topic_image_path: url(../imgs/icon/label_topic.png);
 @label_photo_image_path: url(../imgs/icon/wh2.png);
@@ -11,6 +12,7 @@
 @specialGif_image_path: url(../imgs/icon/special.gif);
 //单个菜单栏宽度
 @back_width: 980px;
+@back_change_width: 1160px;
 @menu_width_first: 70px;
 @menu_width_second: 58px;
 @menu_width_third: 46px;
