--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -2,6 +2,7 @@
 @icons_image_path: url(../imgs/icon/icons.png);
 @icons2_image_path: url(../imgs/icon/icons2.png);
 @icon2_image_path: url(../imgs/icon/up-new-iocn.png);
+@mobilePhone_download_image_path: url(../imgs/icon/app-download-tips.png);
 @foot_icon_image_path: url(../imgs/icon/foot_icon.png);
 @label_active_image_path: url(../imgs/icon/label_active.png);
 @label_topic_image_path: url(../imgs/icon/label_topic.png);
