添加轮播框(未完成)

--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -11,6 +11,11 @@
 @logo_image_path: url(../imgs/header/logo.png);
 @userPortrait_image_path: url(../imgs/header/alun.png);
 @specialGif_image_path: url(../imgs/icon/special.gif);
+@carousel0_image_path: url(../imgs/carousel/carousel0.jpg);
+@carousel1_image_path: url(../imgs/carousel/carousel1.jpg);
+@carousel2_image_path: url(../imgs/carousel/carousel2.jpg);
+@carousel3_image_path: url(../imgs/carousel/carousel3.jpg);
+@carousel4_image_path: url(../imgs/carousel/carousel4.jpg);
 //单个菜单栏宽度
 @back_width: 980px;
 @back_change_width: 1160px;
