--- a/q6(vue-webpack)/src/assets/less/main.less
+++ b/q6(vue-webpack)/src/assets/less/main.less
@@ -3,4 +3,8 @@
 @import './child_menu.less';
 @import './second_header.less';
 @import './body.less';
+@import './suoyin.less';
+@import './carousel.less';
+@import './hot_video.less';
+@import './extension.less';
 @import './footer.less';
