--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -12,6 +12,8 @@
 @userPortrait_image_path: url(../imgs/header/alun.png);
 @specialGif_image_path: url(../imgs/icon/special.gif);
 @carousel_image_path: url(../imgs/carousel/carousel.jpg);
+@watchlater1_image_path: url(../imgs/icon/watchlater-1.png);
+@watchlater2_image_path: url(../imgs/icon/watchlater-2.png);
 //单个菜单栏宽度
 @back_width: 980px;
 @back_change_width: 1160px;
