--- a/q6(vue-webpack)/src/assets/less/body.less
+++ b/q6(vue-webpack)/src/assets/less/body.less
@@ -5,277 +5,18 @@
     height: 1000px;
 }
 
-.suoyin_road {
-    display: inline-block;
-    position: absolute;
-    z-index: 1;
-    right: -10px;
-}
-
-.suoyin {
-    position: fixed;
-    top: 250px;
-    bottom: 20px;
-    width: 50px;
-    transition: all 0.5s;
-}
-
-.position_menu {
-    text-align: center;
-    width: 100%;
-    background-color: #F6F9FA;
-    border-radius: 4px;
-    box-shadow: 0 0 0px 1px #E6EAEF;
-    overflow: hidden;
-    li {
-        display: block;
-        height: 38px;
-        line-height: 38px;
-        transition: all 0.25s;
-        &:hover {
-            background-color: #00A1D6;
-            color: white;
-            cursor: pointer;
-        }
-    }
-    .position_18 {
-        border-top: 1px solid #E6EAEF;
-        height: 50px;
-        &_image {
-            line-height: 22px;
-            width: 100%;
-            height: 22px;
-            padding-top: 26px;
-            padding-bottom: 2px;
-            background: @icons_image_path -647px -144px;
-            &:hover {
-                background-position:  -711px -144px;
-            }
-        }
-    }
-}
-
-.baffle {
-    position: relative;
-    z-index: -1;
-    top: -10px;
-    margin: auto;
-    width: 30px;
-    height: 30px;
-    border: 1px solid #E6EAEF;
-}
-
-.back_top {
-    position: relative;
-    top: -20px;
-    width: 100%;
-    height: 46px;
-    border-radius: 4px;
-    cursor: pointer;
-    background-color: #F6F9FA;
-    box-shadow: 0 0 0px 1px #E6EAEF;
-    &:hover {
-        background-color: #00A1D6;
-        
-    }
-    &_image {
-        width: 100%;
-        height: 100%;
-        background: @icons_image_path -647px -73px;
-        &:hover {
-            background-position:  -712px -73px;
-        }
-    }
-}
-
-.mobilePhone {
-    position: relative;
-    width: 80px;
-    height: 80px;
-    left: -15px;
-    top: -18px;
-    background: url(../imgs/header/animation.png);
-    &_download_image {
-        position: absolute;
-        visibility: hidden;
-        opacity: 0;
-        width: 106px;
-        height: 44px;
-        top: -20px;
-        left: -106px;
-        background: @mobilePhone_download_image_path;
-        transition: all 0.8s;
-    }
-    &:hover {
-        cursor: pointer;
-        .mobilePhone_download_image {
-            opacity: 1;
-            visibility: visible;
-        }
-    }
-}
-
-.carousel {
-    position: relative;
-    display: inline-block;
-    width: 440px;
-    height: 220px;
-    border-radius: 4px;
-    overflow: hidden;
-}
-
-.carousel_back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: @carousel_image_path 0 0 no-repeat;
-    transition: all 0.2s;
-    &:hover {
-        cursor: pointer;
-        + .carousel_more {
-            opacity: 1;
-            visibility: visible;
-        }
-    }
-}
-
-.carousel_more {
+.watchlater {
     position: absolute;
     visibility: hidden;
     opacity: 0;
-    transition: all 0.3s;
-    border-radius: 4px;
-    right: 25px;
-    bottom: 38px;
-    overflow: hidden;
-    &_back {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
+    right: 5px;
+    bottom: 3px;
+    width: 22px;
+    height: 22px;
+    &.add {
+        background: @watchlater1_image_path;
     }
-    &_word {
-        position: relative;
-        background: @icons_image_path -505px -211px;
-        font-size: 12px;
-        color: white;
-        padding-left: 8px;
-        padding-right: 16px;
-        padding-top: 4px;
-        padding-bottom: 4px;
-        &:hover {
-            text-shadow: 0px 0px 4px white;
-        }
-    }
-    &:hover {
-        cursor: pointer;
-        opacity: 1;
-        visibility: visible;
-    }
-}
-
-.carousel_title {
-    position: absolute;
-    font-size: 14px;
-    bottom: 10px;
-    left: 20px;
-    color: white;
-    cursor: pointer;
-    &:hover {
-        text-shadow: 0px 0px 1px white;
-    }
-}
-
-.carousel_button {
-    position: absolute;
-    right: 25px;
-    bottom: 10px;
-    line-height: 0;
-    div {
-        display: inline-block;
-        width: 22px;
-        height: 22px;
-        margin-right: 5px;
-        background: @icons_image_path -853px -789px;
-        &:hover {
-            background: @icons_image_path -917px -789px;
-            cursor: pointer;
-        }
-        &.carousel_button_click {
-            background-position: -853px -725px;
-        }
-    }
-}
-
-.hot_video {
-    position: absolute;
-    display: inline-block;
-    right: 0;
-    width: 540px;
-    line-height: 0;
-    &:hover &_time_label{
-        opacity: 1;
-        visibility: visible;
-    }
-    &_time {
-        &_label {
-            position: absolute;
-            visibility: hidden;
-            opacity: 0;
-            transition: all 0.2s;
-            top: 102px;
-            width: 520px;
-            right: 0;
-            &:hover {
-                cursor: pointer;
-                text-shadow: 0px 0px 1px white;
-            }
-            &_arrow_0, &_arrow_1 {
-                position: absolute;
-                width: 5px;
-                height: 21px;
-                top: 18px;
-            }
-            &_arrow_0 {
-                left: 5px;
-                background: @icons2_image_path 0 -1228px;
-            }
-            &_arrow_1 {
-                right: 5px;
-                background: @icons2_image_path 0 -1280px;
-            }
-            &_0, &_1 {
-                position: absolute;
-                font-size: 13px;
-                line-height: 16px;
-                color: white;
-                text-align: center;
-                width: 20px;
-                height: 32px;
-                padding-top: 13px;
-                padding-bottom: 13px;
-                background-color: rgba(0, 0, 0, 0.6);
-            }
-            &_0 {
-                left: 0;
-                border-radius: 0 4px 4px 0;
-                padding-left: 10px;
-                padding-right: 5px;
-            }
-            &_1 {
-                right: 0;
-                border-radius: 4px 0 0 4px;
-                padding-left: 5px;
-                padding-right: 10px;
-            }
-        }
-        &_item {
-            display: inline-block;
-            border-radius: 4px;
-            margin-left: 20px;
-            margin-bottom: 20px;
-            width: 160px;
-            height: 100px;
-        }
+    &.delete {
+        background: @watchlater2_image_path;
     }
 }
