--- a/q6(vue-webpack)/src/assets/less/extension.less
+++ b/q6(vue-webpack)/src/assets/less/extension.less
@@ -93,7 +93,7 @@
         font-size: 12px;
         line-height: 34px;
         padding-left: 20px;
-        padding-right: 19px;
+        width: 240px;
         color: #6D757A;
         background-color: #E5E9EF;
         border-radius: 4px;
