正在直播完成一半

--- a/q6(vue-webpack)/src/assets/less/main.less
+++ b/q6(vue-webpack)/src/assets/less/main.less
@@ -7,4 +7,5 @@
 @import './carousel.less';
 @import './hot_video.less';
 @import './extension.less';
+@import './child_module.less';
 @import './footer.less';
