--- a/q6(vue-webpack)/src/assets/less/body.less
+++ b/q6(vue-webpack)/src/assets/less/body.less
@@ -2,7 +2,6 @@
     position: relative;
     margin-top: 10px;
     width: 100%;
-    height: 1000px;
 }
 
 .watchlater {
@@ -36,14 +35,154 @@
         div {
             display: inline;
             font-size: 24px;
+            margin-right: 12px;
         }
         span {
             color: #6D757A;
-            padding-left: 30px;
             font-size: 12px;
             &:hover {
                 cursor: pointer;
                 color: #00A1D6;
+            }
+        }
+    }
+}
+
+.child_title {
+    position: relative;
+    &_image {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        background: @icons_image_path -140px -76px;
+    }
+    &_word {
+        position: relative;
+        top: -12px;
+        left: 10px;
+        display: inline-block;
+        .child_title_word_title {
+            display: inline;
+            font-size: 24px;
+            margin-right: 12px;
+        }
+        span {
+            color: #6D757A;
+            font-size: 12px;
+            .live_online {
+                color: #00A1D6;
+            }
+        }
+        &_fire {
+            display: inline;
+            margin-left: 30px;
+            font-size: 12px;
+            padding-left: 18px;
+            color: #6D758F;
+            background: @icons_image_path -664px -1112px no-repeat;
+            cursor: pointer;
+            &:hover {
+                color: #00A1D6;
+            }
+        }
+    }
+    &_other {
+        position: absolute;
+        display: inline-block;
+        vertical-align: top;
+        right: 20px;
+        bottom: 12px;
+        font-size: 12px;
+    }
+    &_news, &_more {
+        position: relative;
+        display: inline-block;
+        vertical-align: top;
+        border-radius: 4px;
+        padding-left: 10px;
+        padding-right: 10px;
+        height: 24px;
+        border: 1px solid #CCD0D7;
+        line-height: 24px;
+        cursor: pointer;
+        &:hover {
+            background-color: #CCD0D7;
+        }
+    }
+    &_more {
+        margin-left: 5px;
+        position: relative;
+        width: 56px;
+        padding: 0;
+        &_image {
+            position: absolute;
+            right: 10px;
+            top: 6px;
+            width: 7px;
+            height: 12px;
+            background: @icons_image_path -478px -217px;
+            transition: all 0.2s;
+        }
+        &_word {
+            position: absolute;
+            left: 10px;
+            color: #555555;
+            padding-right: 10px;
+            transition: all 0.2s;
+        }
+        &:hover &_image {
+            right: 7px;
+        }
+        &:hover &_word {
+            left: 7px;
+        }
+    }
+    &_news {
+        &_image {
+            display: inline-block;
+            vertical-align: top;
+            margin-top: 6px;
+            width: 12px;
+            height: 12px;
+            background: @icons_image_path -475px -89px;
+            transition: all 0.6s;
+        }
+        &:hover &_image {
+            transform: rotate(360deg);
+        }
+    }
+    &_button {
+        position: relative;
+        display: inline-block;
+        height: 16px;
+        font-size: 12px;
+        &_dynamic, &_submission {
+            display: inline-block;
+            vertical-align: top;
+            cursor: pointer;
+        }
+        &_submission {
+            margin-left: 10px;
+        }
+        &_arrow {
+            position: relative;
+            width: 100%;
+            &_head {
+                position: relative;
+                width: 0;
+                bottom: -4px;
+                margin: auto;
+                border: 4px solid #00a1d6;
+                border-top: 0;
+                border-left-color: transparent;
+                border-right-color: transparent;
+            }
+            &_line {
+                position: absolute;
+                bottom: -4px;
+                width: 100%;
+                border: 1px solid #00a1d6;
+                border-bottom: 1px;
             }
         }
     }
