--- a/q6(vue-webpack)/src/assets/less/child_module.less
+++ b/q6(vue-webpack)/src/assets/less/child_module.less
@@ -108,4 +108,50 @@
     vertical-align: top;
     width: 260px;
     height: 100%;
+    overflow: hidden;
+    &_title {
+        position: relative;
+        &_item {
+            position: relative;
+            display: inline-block;
+            margin-right: 10px;
+            font-size: 12px;
+            cursor: pointer;
+        }
+    }
+    &_connent {
+        position: relative;
+        display: inline-block;
+        width: 780px;
+        &_rank {
+            position: relative;
+            display: inline-block;
+            width: 260px;
+            &_item {
+                position: relative;
+                
+                height: 40px;
+                margin-bottom: 14px;
+                padding-left: 25px;
+                &_head {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 18px;
+                    height: 18px;
+                    line-height: 16px;
+                    text-align: center;
+                    font-size: 12px;
+                    color: white;
+                    background-color: #F25D8E;
+                    border-radius: 3px;
+                }
+                &_icon {
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 20px;
+                }
+            }
+        }
+    }
 }
