--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -15,6 +15,9 @@
 @watchlater1_image_path: url(../imgs/icon/watchlater-1.png);
 @watchlater2_image_path: url(../imgs/icon/watchlater-2.png);
 @online_people_image_path: url(../imgs/icon/online_people.png);
+@eye_image_path: url(../imgs/icon/eye.png);
+@wh_image_path: url(../imgs/icon/wh.png);
+@sp_image_path: url(../imgs/icon/sp.png);
 //单个菜单栏宽度
 @back_width: 980px;
 @back_change_width: 1160px;
