--- a/q6(vue-webpack)/src/assets/less/child_module.less
+++ b/q6(vue-webpack)/src/assets/less/child_module.less
@@ -10,6 +10,7 @@
         height: 100%;
         &_video {
             position: relative;
+            top: 10px;
             &_image {
                 position: relative;
                 width: 100%;
@@ -108,28 +109,40 @@
     vertical-align: top;
     width: 260px;
     height: 100%;
+    font-size: 12px;
     overflow: hidden;
     &_title {
         position: relative;
+        height: 25px;
+        margin-top: 12px;
         &_item {
             position: relative;
             display: inline-block;
             margin-right: 10px;
             font-size: 12px;
             cursor: pointer;
+            &_on {
+                color: #00A1D6;
+            }
         }
     }
     &_connent {
         position: relative;
         display: inline-block;
-        width: 780px;
-        &_rank {
+        left: 0;
+        width: 800px;
+        height: 324px;
+        margin-top: 20px;
+        transition: all 0.5s;
+        &_rank, &_fork {
             position: relative;
             display: inline-block;
+            vertical-align: top;
             width: 260px;
+            height: 100%;
+            margin-right: 10px;
             &_item {
                 position: relative;
-                
                 height: 40px;
                 margin-bottom: 14px;
                 padding-left: 25px;
@@ -141,15 +154,138 @@
                     height: 18px;
                     line-height: 16px;
                     text-align: center;
-                    font-size: 12px;
                     color: white;
                     background-color: #F25D8E;
                     border-radius: 3px;
                 }
                 &_icon {
+                    display: inline-block;
                     width: 40px;
                     height: 40px;
                     border-radius: 20px;
+                    cursor: pointer;
+                }
+                &_word {
+                    display: inline-block;
+                    vertical-align: top;
+                    width: 180px;
+                    height: 100%;
+                    margin-left: 15px;
+                    cursor: pointer;
+                    &:hover &_up {
+                        color: #00A1D6;
+                    }
+                    &_title {
+                        margin-top: 4px;
+                        height: 16px;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        color: #99A2AA;
+                        cursor: pointer;
+                    }
+                }
+                &_watch {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    line-height: 12px;
+                    color: #99A2AA;
+                    padding-left: 14px;
+                    background: @eye_image_path no-repeat;
+                }
+            }
+        }
+        &_fork_item {
+            padding-left: 0;
+            &_word {
+                width: 205px;
+            }
+        }
+        &_recommend {
+            position: relative;
+            display: inline-block;
+            vertical-align: top;
+            width: 260px;
+            height: 100%;
+            &_top {
+                position: relative;
+                width: 100%;
+                height: 248px;
+                border-radius: 4px;
+                overflow: hidden;
+                &_image {
+                    position: relative;
+                    left: 0;
+                    width: 780px;
+                    height: 100%;
+                    transition: all 0.5s;
+                    &_item {
+                        position: relative;
+                        display: inline-block;
+                        vertical-align: top;
+                        width: 260px;
+                        height: 248px;
+                        &_plate {
+                            position: absolute;
+                            bottom: 0;
+                            width: 100%;
+                            height: 60px;
+                            background-color: rgba(0, 0, 0, 0.4);
+                            color: white;
+                            line-height: 30px;
+                            &_title {
+                                margin-left: 10px;
+                            }
+                            &_back {
+                                position: absolute;
+                                bottom: 0;
+                                width: 100%;
+                                height: 50%;
+                                background-color: rgba(0, 0, 0, 0.4);
+                            }
+                        }
+                    }
+                }
+                &_button {
+                    position: absolute;
+                    bottom: 5px;
+                    margin-left: 100px;
+                    line-height: 0;
+                    &_item {
+                        display: inline-block;
+                        vertical-align: top;
+                        margin: 3px;
+                        width: 11px;
+                        height: 6px;
+                        background-color: white;
+                        border-radius: 3px;
+                        cursor: pointer;
+                        transition: all 0.2s;
+                    }
+                    &_on {
+                        background-color: #F45D8F;
+                        width: 27px;
+                    }
+                }
+            }
+            &_down {
+                position: absolute;
+                bottom: 15px;
+                width: 100%;
+                &_left, &_right {
+                    display: inline-block;
+                    vertical-align: top;
+                    width: 127px;
+                    height: 43px;
+                    cursor: pointer;
+                }
+                &_left {
+                    background: @wh_image_path;
+                }
+                &_right {
+                    float: right;
+                    background: @sp_image_path;
                 }
             }
         }
