--- a/q6(vue-webpack)/src/assets/less/body.less
+++ b/q6(vue-webpack)/src/assets/less/body.less
@@ -97,6 +97,50 @@
                 color: #00A1D6;
             }
         }
+        &_time {
+            position: relative;
+            display: inline-block;
+            &_item {
+                display: inline-block;
+                width: 56px;
+                height: 30px;
+                font-size: 18px;
+                text-align: center;
+                cursor: pointer;
+                transition: all 0.3s;
+                &:hover {
+                    color: #00A1D6;
+                }
+                &_on {
+                    color: #00A1D6;
+                }
+            }
+            &_back {
+                position: absolute;
+                bottom: -2px;
+                width: 100%;
+                height: 1px;
+                background-color: #E5E9EF;
+            }
+            &_table {
+                position: absolute;
+                right: 20px;
+                bottom: 10px;
+                width: 104px;
+                height: 34px;
+                font-size: 14px;
+                border: 1px solid #F55D8E;
+                border-radius: 4px;
+                text-align: center;
+                line-height: 34px;
+                color: #F55D8E;
+                &:hover {
+                    cursor: pointer;
+                    background-color: #F55D8E;
+                    color: white;
+                }
+            }
+        }
     }
     &_other {
         position: absolute;
