--- a/q6(vue-webpack)/src/assets/less/child_module.less
+++ b/q6(vue-webpack)/src/assets/less/child_module.less
@@ -116,6 +116,9 @@
                 &_item {
                     display: inline-block;
                     margin: 5px;
+                    &_on {
+                        color: #00A1D6;
+                    }
                 }
             }
             &_days {
@@ -484,6 +487,74 @@
                 &_right {
                     float: right;
                     background: @sp_image_path;
+                }
+            }
+        }
+    }
+}
+
+.time_table {
+    position: relative;
+    margin-top: 50px;
+    width: 100%;
+    height: 494px;
+    font-size: 12px;
+    &_plate {
+        position: relative;
+        display: inline-block;
+        width: 720px;
+        height: 100%;
+        &_comic {
+            margin-top: 16px;
+            width: 700px;
+            height: 398px;
+            &_item {
+                position: relative;
+                display: inline-block;
+                width: 180px;
+                height: 72px;
+                margin-right: 46px;
+                margin-bottom: 36px;
+                &_icon {
+                    display: inline-block;
+                    width: 72px;
+                    height: 72px;
+                    border-radius: 4px;
+                    cursor: pointer;
+                }
+                &_word {
+                    display: inline-block;
+                    position: absolute;
+                    vertical-align: top;
+                    right: 0;
+                    width: 96px;
+                    height: 72px;
+                    &_top {
+                        height: 32px;
+                        overflow: hidden;
+                        cursor: pointer;
+                        &:hover {
+                            color: #00A1D6;
+                        }
+                    }
+                    &_down {
+                        position: absolute;
+                        bottom: 0;
+                        height: 20px;
+                        line-height: 20px;
+                        color: #AAAAAA;
+                        span {
+                            margin-left: 5px;
+                            padding-left: 7px;
+                            padding-right: 7px;
+                            padding-top: 2px;
+                            padding-bottom: 2px;
+                            background-color: #FF8EB3;
+                            border-radius: 10px;
+                            color: white;
+                            cursor: pointer;
+                        }
+                    }
                 }
             }
         }
