--- a/q6(vue-webpack)/src/assets/less/main.less
+++ b/q6(vue-webpack)/src/assets/less/main.less
@@ -11,4 +11,5 @@
 @import './rank1.less';
 @import './rank2.less';
 @import './special_recommend.less';
+@import './recommend_module.less';
 @import './footer.less';
