--- a/q6(vue-webpack)/src/assets/less/child_module.less
+++ b/q6(vue-webpack)/src/assets/less/child_module.less
@@ -309,10 +309,10 @@
                         border-radius: 3px;
                         cursor: pointer;
                         transition: all 0.2s;
-                    }
-                    &_on {
-                        background-color: #F45D8F;
-                        width: 27px;
+                        &.on {
+                            background-color: #F45D8F;
+                            width: 27px;
+                        }
                     }
                 }
             }
