--- a/q6(vue-webpack)/src/assets/less/special_recommend.less
+++ b/q6(vue-webpack)/src/assets/less/special_recommend.less
@@ -49,10 +49,10 @@
                 border-radius: 3px;
                 cursor: pointer;
                 transition: all 0.2s;
-            }
-            &_on {
-                background-color: #F45D8F;
-                width: 27px;
+                &.on {
+                    background-color: #F45D8F;
+                    width: 27px;
+                }
             }
         }
         &_title {
@@ -66,10 +66,10 @@
                 opacity: 0;
                 visibility: hidden;
                 transition: all 0.3s;
-            }
-            &_on {
-                opacity: 1;
-                visibility: visible;
+                &.on {
+                    opacity: 1;
+                    visibility: visible;
+                }
             }
         }
     }
