--- a/q6(vue-webpack)/src/assets/less/values.less
+++ b/q6(vue-webpack)/src/assets/less/values.less
@@ -18,6 +18,7 @@
 @eye_image_path: url(../imgs/icon/eye.png);
 @wh_image_path: url(../imgs/icon/wh.png);
 @sp_image_path: url(../imgs/icon/sp.png);
+@recommend_module_image_path: url(../imgs/icon/recommend_other_image.jpg);
 //单个菜单栏宽度
 @back_width: 980px;
 @back_change_width: 1160px;
